set(LIBBINACPP_DIR "${CMAKE_SOURCE_DIR}/lib/libbinacpp")
include_directories(${LIBBINACPP_DIR}/include)
link_directories(${LIBBINACPP_DIR}/lib)

file(GLOB EXAMPLES "*.cpp")
file(GLOB SCRIPTS "*.sh")

foreach(SCRIPT ${SCRIPTS})
  configure_file(${SCRIPT} ${CMAKE_BINARY_DIR}/example COPYONLY)
endforeach()

set(ITER 0)
foreach(EXAMPLE ${EXAMPLES})
  get_filename_component(TARGET_NAME ${EXAMPLE} NAME_WE)
  message("Build executable - ${TARGET_NAME}")
  add_executable(${TARGET_NAME} ${EXAMPLE})
  add_dependencies(${TARGET_NAME} binacpp)
  target_link_libraries(${TARGET_NAME} curl jsoncpp_lib_static crypto websockets binacpp)
  math(EXPR ITER "${ITER} + 1")
endforeach()
