set(BINACPP_INSTALL_DIR ${CMAKE_SOURCE_DIR}/lib/libbinacpp)
set(CMAKE_INSTALL_DIR ${BINACPP_INSTALL_DIR}/lib)
set(CMAKE_INSTALL_INCLUDEDIR ${BINACPP_INSTALL_DIR}/include)

include_directories(${jsoncpp_SOURCE_DIR}/include)

file(GLOB SRCS *.cpp)
add_library(binacpp SHARED ${SRCS})
add_dependencies(binacpp jsoncpp_lib)
target_link_libraries(binacpp jsoncpp_lib curl crypto websockets)

file(GLOB HEADERS *.h)
set_target_properties(binacpp PROPERTIES PUBLIC_HEADER "${HEADERS}")

set(PROGRAM_PERMISSIONS_DEFAULT
  OWNER_WRITE OWNER_READ OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE)

install(TARGETS binacpp
  LIBRARY DESTINATION ${CMAKE_INSTALL_DIR}
  LIBRARY PERMISSIONS ${PROGRAM_PERMISSIONS_DEFAULT}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
